CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT (ABTH)

INCLUDE_DIRECTORIES (${ABTH_SOURCE_DIR}/boost/include/boost-1_37) 
INCLUDE_DIRECTORIES (${ABTH_SOURCE_DIR}) 

LINK_DIRECTORIES (${ABTH_BINARY_DIR}/lib) 
LINK_DIRECTORIES (${ABTH_SOURCE_DIR}/boost/lib) 

SET (EXECUTABLE_OUTPUT_PATH ${ABTH_BINARY_DIR}/bin)

ADD_SUBDIRECTORY (packwrap)
ADD_SUBDIRECTORY (test)
